Fixed all compilation issues along with mass refactor. All models are parameterized to support chaining. Add build steps to validate and format