@@ -2,7 +2,6 @@ package io.trishul.object.store.file.model;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
-
 import io.trishul.object.store.file.model.dto.AddIaasObjectStoreFileDto;
 import io.trishul.object.store.file.model.dto.IaasObjectStoreFileDto;
 import io.trishul.object.store.file.model.dto.UpdateIaasObjectStoreFileDto;
@@ -14,70 +13,65 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 public class IaasObjectStoreFileMapperTest {
-    private IaasObjectStoreFileMapper mapper;
+  private IaasObjectStoreFileMapper mapper;
 
-    @BeforeEach
-    public void init() {
-        mapper = IaasObjectStoreFileMapper.INSTANCE;
-    }
+  @BeforeEach
+  public void init() {
+    mapper = IaasObjectStoreFileMapper.INSTANCE;
+  }
 
-    @Test
-    public void testToDto_ReturnsNull_WhenPojoIsNull() {
-        assertNull(mapper.toDto(null));
-    }
+  @Test
+  public void testToDto_ReturnsNull_WhenPojoIsNull() {
+    assertNull(mapper.toDto(null));
+  }
 
-    @Test
-    public void testToDto_ReturnsDto_WhenPojoIsNotNull() throws MalformedURLException {
-        IaasObjectStoreFile tenant =
-                new IaasObjectStoreFile(
-                        URI.create("file.txt"),
-                        LocalDateTime.of(2000, 1, 1, 0, 0),
-                        new URL("http://localhost/"));
+  @Test
+  public void testToDto_ReturnsDto_WhenPojoIsNotNull() throws MalformedURLException {
+    IaasObjectStoreFile tenant = new IaasObjectStoreFile().setId(URI.create("file.txt"))
+        .setExpiration(LocalDateTime.of(2000, 1, 1, 0, 0)).setFileUrl(new URL("http://localhost/"));
 
-        IaasObjectStoreFileDto dto = mapper.toDto(tenant);
+    IaasObjectStoreFileDto dto = mapper.toDto(tenant);
 
-        IaasObjectStoreFileDto expected =
-                new IaasObjectStoreFileDto(
-                        URI.create("file.txt"),
-                        LocalDateTime.of(2000, 1, 1, 0, 0),
-                        new URL("http://localhost/"));
+    IaasObjectStoreFileDto expected = new IaasObjectStoreFileDto()
+        .setFileKey(URI.create("file.txt")).setExpiration(LocalDateTime.of(2000, 1, 1, 0, 0))
+        .setFileUrl(new URL("http://localhost/"));
 
-        assertEquals(expected, dto);
-    }
+    assertEquals(expected, dto);
+  }
 
-    @Test
-    public void testFromUpdateDto_ReturnsNull_WhenDtoIsNull() {
-        assertNull(mapper.fromUpdateDto(null));
-    }
+  @Test
+  public void testFromUpdateDto_ReturnsNull_WhenDtoIsNull() {
+    assertNull(mapper.fromUpdateDto(null));
+  }
 
-    @Test
-    public void testFromUpdateDto_ReturnsPojo_WhenDtoIsNotNull() throws MalformedURLException {
-        UpdateIaasObjectStoreFileDto dto =
-                new UpdateIaasObjectStoreFileDto(
-                        URI.create("file.txt"), LocalDateTime.of(2000, 1, 1, 5, 15));
+  @Test
+  public void testFromUpdateDto_ReturnsPojo_WhenDtoIsNotNull() throws MalformedURLException {
+    UpdateIaasObjectStoreFileDto dto = new UpdateIaasObjectStoreFileDto()
+        .setFileKey(URI.create("file.txt")).setMinValidUntil(LocalDateTime.of(2000, 1, 1, 5, 15));
 
-        IaasObjectStoreFile tenant = mapper.fromUpdateDto(dto);
+    IaasObjectStoreFile tenant = mapper.fromUpdateDto(dto);
 
-        IaasObjectStoreFile expected =
-                new IaasObjectStoreFile(
-                        URI.create("file.txt"), LocalDateTime.of(2000, 1, 1, 6, 0), null);
-        assertEquals(expected, tenant);
-    }
+    IaasObjectStoreFile expected = new IaasObjectStoreFile().setId(URI.create("file.txt"))
+        .setExpiration(LocalDateTime.of(2000, 1, 1, 6, 0));
 
-    @Test
-    public void testFromAddDto_ReturnsNull_WhenDtoIsNull() {
-        assertNull(mapper.fromAddDto(null));
-    }
+    assertEquals(expected, tenant);
+  }
 
-    @Test
-    public void testFromAddDto_ReturnsPojo_WhenDtoIsNotNull() throws MalformedURLException {
-        AddIaasObjectStoreFileDto dto =
-                new AddIaasObjectStoreFileDto(LocalDateTime.of(2000, 1, 1, 5, 15));
+  @Test
+  public void testFromAddDto_ReturnsNull_WhenDtoIsNull() {
+    assertNull(mapper.fromAddDto(null));
+  }
 
-        IaasObjectStoreFile tenant = mapper.fromAddDto(dto);
+  @Test
+  public void testFromAddDto_ReturnsPojo_WhenDtoIsNotNull() throws MalformedURLException {
+    AddIaasObjectStoreFileDto dto
+        = new AddIaasObjectStoreFileDto().setMinValidUntil(LocalDateTime.of(2000, 1, 1, 5, 15));
 
-        IaasObjectStoreFile expected =
-                new IaasObjectStoreFile(null, LocalDateTime.of(2000, 1, 1, 6, 0), null);
-        assertEquals(expected, tenant);
-    }
+    IaasObjectStoreFile tenant = mapper.fromAddDto(dto);
+
+    IaasObjectStoreFile expected
+        = new IaasObjectStoreFile().setExpiration(LocalDateTime.of(2000, 1, 1, 6, 0));
+
+    assertEquals(expected, tenant);
+  }
 }
